# StampEngine

./: .gitignore  CMakeLists.txt  GLEngine.sln  LICENSE.txt  README.md  StampEngine.sln
.github/: contributing.md
.github/workflows/: cmake-multi-platform.yml  codeql.yml
AtariEmulator/: AtariEmulator.vcxproj  AtariEmulator.vcxproj.filters  SWM.hpp  dllmain.cpp  glm.h  libload.h
GLEngine/: GLEngine.vcxproj  GLEngine.vcxproj.filters  Source.cpp  WinManager.cpp  glcore.h  glmat.h  glmesh.h  glquat.h  glvec.h  physics.h
GameEngine/: AI.ixx  ChemistrySimScene.ixx  Economy.ixx  Game.ixx  GameEngine.vcxproj  GameEngine.vcxproj.filters  Physics.ixx  SWM.ixx  SceneEditor.ixx  Server.ixx  VirtualDrive.ixx  WinManager.ixx  debug.h  engine.ixx  eventlistener.hpp  gamerender.ixx  getset.h  jolt.h  luamanager.ixx  main.cpp  main.ixx  math.ixx  testPhysicsScene.ixx  testScene.ixx
GameEngine/lua/: luaconf.h
GameEngine/resources/: ariel_24.fmp  meshes.txt  oceanShader.glsl  shader.glsl  shaderBillboard.glsl  shaderUI.glsl  textures.txt
GameEngine/script/: test.lua
GameEngine2/: GameEngine2.vcxproj  GameEngine2.vcxproj.filters  Source.cpp  hid.cpp  win32hid.cpp
GameEngine2/gl/: glew.h  glm.h
GameEngine2/lua/: luaconf.h
GameEngine2/resources/script/: test.lua
GameEngine2/sol/: config.hpp
GameEngine2/stamp/: debug,h  debug.h  define.h  entry.h  getset.h  inoncopyable.h  memory.h  noncopyable.h  stamp.h  state.h
GameEngine2/stamp/core/: bit_extension.h  bit_internal.h  coroutine.h  define.h  event.h  getset.h  iterator_extension.h  memory.h  noncopyable.h  string_extension.cpp  string_extension.h  string_internal.cpp  string_internal.h  taskqueue.h  time.cpp  time.h  window_base.cpp  window_base.h
GameEngine2/stamp/engine/: define.h  module.h  scene.h  windowscene.h
GameEngine2/stamp/graphics/: alignment.h  color.h  define.h  window.cpp  window.h  window_base.h  window_gl.h  windowgl.h
GameEngine2/stamp/hid/: define.h  focusgroup.h  hid.cpp  hid.h  hid_base.h  inputgroup.h  keyboard.h  lua.h  mouse.h
GameEngine2/stamp/lua/: define.h  linit.cpp  lua.cpp  lua.h  lualib.cpp  lualib.h  luamath.h
GameEngine2/stamp/math/: algorithm.h  alignment.h  define.h  lua.cpp  lua.h  lualib.cpp  mathdefine.h  matrix.h  quaternion.h  rect.h  vector.h
GameEngine2/stamp/network/: define.h  network_mutex.h  socketstream.h
GameEngine2/stamp/test/: coroutineTest.cpp  luaTest.cpp  matrixText.cpp  memoryTest.cpp  quaternionTest.cpp  vectorTest.cpp
GameEngine2GTest/: GameEngine2GTest.vcxproj  GameEngine2GTest.vcxproj.filters  test.cpp
GameEngine2GTest/stamp/test/: luaTest.cpp  matrixText.cpp  quaternionTest.cpp  vectorTest.cpp
GlEngine2/: AI.cpp  Audio.cpp  GlEngine2.vcxproj  GlEngine2.vcxproj.filters  Physics.cpp  Render.cpp  Resources.cpp  Source.cpp  audio.h  filemanager.h  font.txt  gamecore.cpp  gamecore.h  gamemanager.cpp  gamerender.h  gameresources.h  gametexture.h  gameui.h  gl.cpp  gl.h  glext.h  glmat.h  glmath.h  glquat.h  glrender.h  gltransform.h  glvec.h  math.cpp  serialize.h  wglext.h  wincore.h  winevent.h  wininput.h  winmanager.cpp  xptr.h
GlEngine2/resources/gfx/: audio.txt  materials.txt  (+1 more)
Setup/: Setup.vdproj
StampWinManager/: EL_list.hpp  GLM.cpp  LibLoad.cpp  SWM.cpp  SWM.hpp  SWM.ixx  StampWinManager.vcxproj  StampWinManager.vcxproj.filters  debug.h  dll.h  dllmain.cpp  engine.ixx  eventlistener.hpp  framework.h  gamerender.ixx  glm.h  libload.h  luamanager.ixx  main.cpp  math.cpp  math.hpp  math.ixx  render.hpp  render.ixx  testScene.ixx
StampWinManager/GLM/: GLM.cpp  glm.h
StampWinManager/SE/: StampEngine.cpp  render.hpp  stampengine.hpp
app/my_app/: CMakeLists.txt
app/my_app/src/: source.cpp  source2.cpp
cmake/: benchmark.cmake  boost.cmake  concurrentqueue.cmake  deerimgui.cmake  doxygen.cmake  glew.cmake  glfw.cmake  gtest.cmake  imgui.cmake  miniaudio.cmake
core/: CMakeLists.txt
diagnose/: CMakeLists.txt
lib/core/: CMakeLists.txt
lib/core/include/stamp/: stamp_config.h.in
lib/diagnose/: CMakeLists.txt
lib/diagnose/include/stamp/diagnose/: dynamic.h  to_string.h
lib/diagnose/src/: diagnose.cpp
lib/math/: CMakeLists.txt
lib/math/include/stamp/math/: cayley_dickson.h  tuple_base.h
lib/memory/: CMakeLists.txt
lib/memory/docs/: memory_design.md
lib/reflect/: CMakeLists.txt  reflect.md  reflect_howto.md  reflect_reference.md
lib/reflect/docs/: namespace.md  reflect_overview.md  stamp_reflect.md
lib/reflect/include/stamp/reflect/: member_function_traits.h  member_funtion_traits.h  meta_tuple.h  reflect.h  reflect_ctypes.h  reflect_helpers.h  reflect_private.h  reflect_traits.h  reflect_types.h  string_literal.h  view.h  view_description.txt  view_handle.h
lib/reflect/include/stamp/reflect/std/: reflect_array.h  reflect_iterator.h  reflect_pair.h  reflect_std.h  reflect_vector.h
lib/reflect/include/stamp/reflect/types/: constructor.h  function.h  iterator.h  iterators.h  member.h  operator.h  property.h  tag.h
lib/reflect/include/stamp/reflect/view/: default_view_desc.h  view.h  view_handle.h  view_handle_impl.h
lib/serialize/: CMakeLists.txt  serialize.md
lib/serialize/docs/: namespace.md  serialize_overview.md
lib/serialize/include/stamp/serialize/: concepts.h  json.h  ordered_binary.h  serialize.h  serialize_helpers.h  stream.h
lib/task/: CMakeLists.txt  notes.txt
lib/task/docs/: design.md
lib/task/include/stamp/task/: coroutine.h  task.h  task_queue.h  thread_pool.h
math/: CMakeLists.txt
math/include/stamp/math/: cayley_dickson.h  tuple_base.h
serialize/: CMakeLists.txt
stamp/: CMakeLists.txt
stamp/include/stamp/: type_traits.h
stamp/include/stamp/service/: display.h  network.h  resource.h
stamp/src/: Source.cpp  ~syncthing~source.cpp.tmp
stampEngine/: readme.txt
stamptest/: CMakeLists.txt
stamptest/src/: Source.cpp
test/: CMakeLists.txt
test/resources/: ariel_24.fmp  computeAI.glsl  mesh.mesh  oceanShader.glsl  shader.glsl  shaderUI.glsl  textures.txt
test/src/: Reflect.md  math_test.h  reflect_test.cpp  reflect_test.h  serialize_test.h  source.cpp  task_test.cpp
(+33 files in other folders)
